k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chibi-moe-server
  namespace: k8sdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chibi-moe-server
  template:
    metadata:
      labels:
        app: chibi-moe-server
        env: production
        managed-by: argocd
      annotations:
        deployed-at: "2026-06-14 14:10:52"
    spec:
      imagePullSecrets:
        - name: ocirsecret
      containers:
      - name: server
        image: ghcr.io/darkschneider1024/chibi-moe-server:2944780dbd805695904ac65a33e96c0d84ab73cd
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
